[tool.poetry]
name = "A/B Testing"
version = "0.1.0"
description = ""
authors = ["Bob Wilson <bob.wilson@convexanalytics.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^3.2.0"
uWSGI = "^2.0.19"
Flask = "^1.1.2"
numpy = "^1.19.2"
scipy = "^1.5.3"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
jedi = "^0.17.2"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
black = "^20.8b1"
pylint = "^2.6.0"
flake8 = "^3.8.4"
pydocstyle = "^5.1.1"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
